Main page beta 2016 edition

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -1,2 +1,13 @@
-h1 droidcon Kraków 2016
-p More details coming soon...
+#background-image
+  img(src="/img/main-background.jpg")
+  
+#main-content
+  .container
+    .row
+      .col-xs-12
+        h1.title droidcon Kraków 2016
+        h4 coming soon
+    .row.contact-us
+      .col-xs-12
+        a(href="mailto:contact@droidcon.pl") Contuct us
+      
