--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1,2 +1,52 @@
+html,
 body
+  margin 0
+  padding 0
+  width 100%
+
+// VARIABLES
+blurBackgroundImage = 10px
+
+
+
+#background-image
+  position fixed
+  left 0
+  right 0
+  top -20%
+  z-index 1
+  img
+    width 100%
+    height auto
+
+  // blur effect for the background image
+  -webkit-filter blur(blurBackgroundImage)
+  -moz-filter blur(blurBackgroundImage)
+  -o-filter blur(blurBackgroundImage)
+  -ms-filter blur(blurBackgroundImage)
+  filter blur(blurBackgroundImage)
+  opacity 0.7
+
+#main-content
+  position fixed
+  left 0
+  right 0
+  top 30%
+  z-index 9999
+  background-color rgba(123, 209, 44, 0.6)
+  color white
+  padding 100px 0
   text-align center
+  h1
+    font-weight 700
+  .contact-us
+    margin-top 30px
+    a
+      background-color white
+      color black
+      padding 10px 20px
+      font-weight 700
+      transition padding .2s ease-out
+      &:hover
+        padding 15px 30px
+        text-decoration none
