--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4517,8 +4517,56 @@ button.swiper-pagination-bullet {
   }
 }
 
+html,
 body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+#background-image {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: -20%;
+  z-index: 1;
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
+  filter: blur(10px);
+  opacity: 0.7;
+}
+#background-image img {
+  width: 100%;
+  height: auto;
+}
+#main-content {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 30%;
+  z-index: 9999;
+  background-color: rgba(123,209,44,0.6);
+  color: #fff;
+  padding: 100px 0;
   text-align: center;
+}
+#main-content h1 {
+  font-weight: 700;
+}
+#main-content .contact-us {
+  margin-top: 30px;
+}
+#main-content .contact-us a {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 20px;
+  font-weight: 700;
+  transition: padding 0.2s ease-out;
+}
+#main-content .contact-us a:hover {
+  padding: 15px 30px;
+  text-decoration: none;
 }
 
 /*!
