--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -9,5 +9,5 @@
         h4 coming soon
     .row.contact-us
       .col-xs-12
-        a(href="mailto:contact@droidcon.pl") Contuct us
+        a(href="mailto:contact@droidcon.pl") Contact us
       
