Splash page refreshing

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -1,13 +1,3 @@
 #background-image
-  img(src="/img/main-background.jpg")
-  
-#main-content
-  .container
-    .row
-      .col-xs-12
-        h1.title droidcon Kraków 2016
-        h4 coming soon
-    .row.contact-us
-      .col-xs-12
-        a(href="mailto:contact@droidcon.pl") Contact us
-      
+  img(src="/img/logo.png" alt="droidcon Kraków main logo")
+  a(href="mailto:contact@droidcon.pl") Contact us
