--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1,52 +1,54 @@
+/*import fontu Roboto z google*/
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
+@import '../assets/webfonts/fonts.styl'
+@import 'variables.styl'
+
 html,
 body
   margin 0
   padding 0
   width 100%
+  height 100%
 
 // VARIABLES
-blurBackgroundImage = 10px
-
 
 
 #background-image
-  position fixed
-  left 0
-  right 0
-  top -20%
-  z-index 1
+  background-image url("/img/bg-01.jpg")
+  min-height 100%
+  -moz-background-size cover
+  -webkit-background-size cover
+  background-size cover
+  background-position top center
+  background-repeat no-repeat
+  position relative
   img
-    width 100%
+    width 90%
+    max-width 600px
     height auto
-
-  // blur effect for the background image
-  -webkit-filter blur(blurBackgroundImage)
-  -moz-filter blur(blurBackgroundImage)
-  -o-filter blur(blurBackgroundImage)
-  -ms-filter blur(blurBackgroundImage)
-  filter blur(blurBackgroundImage)
-  opacity 0.7
-
-#main-content
-  position fixed
-  left 0
-  right 0
-  top 30%
-  z-index 9999
-  background-color rgba(123, 209, 44, 0.6)
-  color white
-  padding 100px 0
-  text-align center
-  h1
-    font-weight 700
-  .contact-us
-    margin-top 30px
-    a
-      background-color white
-      color black
-      padding 10px 20px
-      font-weight 700
-      transition padding .2s ease-out
-      &:hover
-        padding 15px 30px
-        text-decoration none
+    position absolute
+    top -20%
+    bottom 0
+    left 0
+    right 0
+    margin auto
+  a
+    position absolute
+    width 150px
+    height 50px
+    top 250px
+    bottom 0
+    left 0
+    right 0
+    margin auto
+    text-align center
+    padding 13px 25px
+    background-color #6EB300
+    color white
+    font-family 'nerissemibold'
+    font-size 16px
+    transition background-color 0.3s ease
+    &:hover
+      background-color #7CC900
+      text-decoration none
+      color white
