Background fix for FF & green-button style

--- a/app/styl/variables.styl
+++ b/app/styl/variables.styl
@@ -4,3 +4,7 @@ xs = "(max-width: 767px)"
 sm = "(min-width: 768px)"
 md = "(min-width: 992px)"
 lg = "(min-width: 1200px)"
+
+
+// COLORS
+colGreen = #6EB300
