--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -1,3 +1,3 @@
 #background-image
   img(src="/img/logo.png" alt="droidcon Kraków main logo")
-  a(href="mailto:contact@droidcon.pl") Contact us
+  a.green-button(href="mailto:contact@droidcon.pl") Contact us
