--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -12,9 +12,25 @@ body
 
 // VARIABLES
 
+// GLOBAL STYLES
+.green-button
+  width 150px
+  height 50px
+  text-align center
+  padding 13px 25px
+  background-color colGreen
+  color white
+  font-family 'nerissemibold'
+  font-size 16px
+  transition background-color 0.3s ease
+  &:hover, &:active, &:focus
+    background-color #7CC900
+    text-decoration none
+    color white
+
 
 #background-image
-  background-image url("/img/bg-02.jpg")
+  background-image url("../img/bg-02.png")
   min-height 100%
   -moz-background-size cover
   -webkit-background-size cover
@@ -34,21 +50,9 @@ body
     margin auto
   a
     position absolute
-    width 150px
-    height 50px
+
     top 250px
     bottom 0
     left 0
     right 0
     margin auto
-    text-align center
-    padding 13px 25px
-    background-color #6EB300
-    color white
-    font-family 'nerissemibold'
-    font-size 16px
-    transition background-color 0.3s ease
-    &:hover
-      background-color #7CC900
-      text-decoration none
-      color white
