--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4547,8 +4547,26 @@ body {
   width: 100%;
   height: 100%;
 }
+.green-button {
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  padding: 13px 25px;
+  background-color: #6eb300;
+  color: #fff;
+  font-family: 'nerissemibold';
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+.green-button:hover,
+.green-button:active,
+.green-button:focus {
+  background-color: #7cc900;
+  text-decoration: none;
+  color: #fff;
+}
 #background-image {
-  background-image: url("/img/bg-02.jpg");
+  background-image: url("../img/bg-02.png");
   min-height: 100%;
   -moz-background-size: cover;
   -webkit-background-size: cover;
@@ -4570,25 +4588,11 @@ body {
 }
 #background-image a {
   position: absolute;
-  width: 150px;
-  height: 50px;
   top: 250px;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
-  text-align: center;
-  padding: 13px 25px;
-  background-color: #6eb300;
-  color: #fff;
-  font-family: 'nerissemibold';
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-#background-image a:hover {
-  background-color: #7cc900;
-  text-decoration: none;
-  color: #fff;
 }
 
 
