--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -30,7 +30,7 @@ body
 
 
 #background-image
-  background-image url("../img/bg-02.png")
+  background-image url("../img/bg-02.jpg")
   min-height 100%
   -moz-background-size cover
   -webkit-background-size cover
