--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4566,7 +4566,7 @@ body {
   color: #fff;
 }
 #background-image {
-  background-image: url("../img/bg-02.png");
+  background-image: url("../img/bg-02.jpg");
   min-height: 100%;
   -moz-background-size: cover;
   -webkit-background-size: cover;
