--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1,6 +1,4 @@
-/*import fontu Roboto z google*/
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
-@import '../assets/webfonts/fonts.styl'
+@import '../assets/webfonts/fonts.css';
 @import 'variables.styl'
 
 html,
@@ -20,7 +18,7 @@ body
   padding 13px 25px
   background-color colGreen
   color white
-  font-family 'nerissemibold'
+  font-family 'nerissemibold', sans-serif
   font-size 16px
   transition background-color 0.3s ease
   &:hover, &:active, &:focus
@@ -50,9 +48,12 @@ body
     margin auto
   a
     position absolute
-
     top 250px
     bottom 0
     left 0
     right 0
     margin auto
+  span
+    font-family 'Roboto Condensed'
+    color white
+    font-size 22px
