--- a/app/templates/head/head-commons.jade
+++ b/app/templates/head/head-commons.jade
@@ -14,6 +14,7 @@ meta(property="og:type", content="")
 meta(property="og:title", content="")
 meta(property="og:image", content="img/facebook-card.png")
 
+link(rel='stylesheet', href='webfonts/fonts.css', type='text/css')
 link(rel='stylesheet', href='stylesheets/app.css', type='text/css')
 link(rel='shortcut icon', href='img/icon.png')
 
