--- a/app/templates/head/head-commons.jade
+++ b/app/templates/head/head-commons.jade
@@ -4,15 +4,18 @@ meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
 meta(charset='utf-8')
 meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=0.75, user-scalable=0')
 
-meta(name='twitter:card', content='summary_large_image')
-meta(name='twitter:site', content='')
-meta(name='twitter:title', content="")
-meta(name='twitter:description', content="")
-meta(name='twitter:image', content='img/twitter-card.png')
+meta(name='description' content='droidcon Krakow is a part of global conference series and a network focusing on the best of Android.')
 
-meta(property="og:type", content="")
-meta(property="og:title", content="")
-meta(property="og:image", content="img/facebook-card.png")
+meta(property="og:title", content="droidcon Kraków 1-3 Dec 2016")
+meta(property="og:type", content="website")
+meta(property="og:image", content="img/droidcon-krakow-logo-bkg.png")
+meta(property="og:url", content="http://droidcon.pl")
+
+meta(name='twitter:card', content="summary")
+meta(name='twitter:url', content="http://droidcon.pl")
+meta(name='twitter:title', content="droidcon Kraków 1-3 Dec 2016")
+meta(name='twitter:description', content="droidcon Krakow is a part of global conference series and a network focusing on the best of Android.")
+meta(name='twitter:image', content="img/droidcon-krakow-logo-bkg.png")
 
 link(rel='stylesheet', href='webfonts/fonts.css', type='text/css')
 link(rel='stylesheet', href='stylesheets/app.css', type='text/css')
