--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4572,6 +4572,11 @@ body {
   right: 0;
   margin: auto;
 }
+#background-image span {
+  font-family: 'Roboto Condensed';
+  color: #fff;
+  font-size: 22px;
+}
 
 
 /*!
