--- a/app/templates/head/head-commons.jade
+++ b/app/templates/head/head-commons.jade
@@ -8,14 +8,14 @@ meta(name='description' content='droidcon Krakow is a part of global conference 
 
 meta(property="og:title", content="droidcon Kraków 1-3 Dec 2016")
 meta(property="og:type", content="website")
-meta(property="og:image", content="img/droidcon-krakow-logo-bkg.png")
+meta(property="og:image", content="http://droidcon.pl/img/droidcon-krakow-logo-bkg.png")
 meta(property="og:url", content="http://droidcon.pl")
 
 meta(name='twitter:card', content="summary")
 meta(name='twitter:url', content="http://droidcon.pl")
 meta(name='twitter:title', content="droidcon Kraków 1-3 Dec 2016")
 meta(name='twitter:description', content="droidcon Krakow is a part of global conference series and a network focusing on the best of Android.")
-meta(name='twitter:image', content="img/droidcon-krakow-logo-bkg.png")
+meta(name='twitter:image', content="/img/droidcon-krakow-logo-bkg.png")
 
 link(rel='stylesheet', href='webfonts/fonts.css', type='text/css')
 link(rel='stylesheet', href='stylesheets/app.css', type='text/css')
