--- a/app/templates/head/head-commons.jade
+++ b/app/templates/head/head-commons.jade
@@ -7,6 +7,7 @@ meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scal
 meta(name='description' content='droidcon Krakow is a part of global conference series and a network focusing on the best of Android.')
 
 meta(property="og:title", content="droidcon Kraków 1-3 Dec 2016")
+meta(property="og:description", content="droidcon Krakow is a part of global conference series and a network focusing on the best of Android.")
 meta(property="og:type", content="website")
 meta(property="og:image", content="http://droidcon.pl/img/droidcon-krakow-logo-bkg.png")
 meta(property="og:url", content="http://droidcon.pl")
