--- a/app/styl/footer.styl
+++ b/app/styl/footer.styl
@@ -1,2 +1,11 @@
-#copyright
-  text-aligh center
+#footer-section
+  background-color #4D4D4D
+  color #EEEDEC
+  text-align center
+  font-family "nerislight", Helvetica, Arial, sans-serif
+  padding 5px 0
+  position absolute
+  bottom 0
+  left 0
+  right 0
+
