--- a/app/templates/head/head-commons.jade
+++ b/app/templates/head/head-commons.jade
@@ -21,7 +21,7 @@ meta(name='twitter:image', content="http://droidcon.pl/img/droidcon-krakow-logo-
 link(rel='stylesheet', href='webfonts/fonts.css', type='text/css')
 link(rel='stylesheet', href='stylesheets/app.css', type='text/css')
 link(rel='shortcut icon', href='img/icon.png')
-link(sizes="32x32" href="img/droidcon-link-logo.png" rel="icon")
+link(sizes="32x32" href="img/droidcon-logo-simple.png" rel="icon")
 
 script(type='text/javascript', src="javascripts/vendor.js")
 script(type='text/javascript', src="javascripts/app.js")
