--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4523,10 +4523,7 @@ button.swiper-pagination-bullet {
   text-align: center;
   font-family: "nerislight", Helvetica, Arial, sans-serif;
   padding: 5px 0;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  min-height: 30px;
 }
 
 @import '../assets/webfonts/fonts.css';
@@ -4536,6 +4533,35 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+}
+body {
+  font-family: "nerislight", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
+.section {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  font-family: "nerislight", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
+.section-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.section-title h2.main-title {
+  font-weight: 500;
+  font-family: "nerisblack", Helvetica, Arial, sans-serif;
+  font-size: 25px;
+}
+.section-subtitle {
+  text-align: center;
+  font-family: "nerisblack", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+}
+.section-paragraph {
+  max-width: 320px;
+  margin: 0 auto;
+  text-align: center;
 }
 .green-button {
   width: 150px;
@@ -4557,7 +4583,7 @@ body {
 }
 #background-image {
   background-image: url("../img/bg-02.jpg");
-  min-height: 100%;
+  height: 100%;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
@@ -4583,6 +4609,61 @@ body {
   left: 0;
   right: 0;
   margin: auto;
+}
+#join-us-section {
+  background-color: #eeedec;
+  color: #1f1f1f;
+}
+#join-us-section #global-logo {
+  max-height: 80px;
+}
+#join-us-section .when-where {
+  margin: 20px auto 0;
+  max-width: 315px;
+  display: table;
+}
+#join-us-section .when-where img {
+  width: 40px;
+  margin-right: 20px;
+  display: table-cell;
+  vertical-align: middle;
+}
+#join-us-section .when-where p {
+  display: table-cell;
+  vertical-align: middle;
+}
+#join-us-section .when-where.empty {
+  width: 315px;
+}
+#join-us-section .when-where.empty p {
+  width: 100%;
+}
+#prev-year-recap-section {
+  background-color: #fff;
+  color: #1f1f1f;
+}
+#prev-year-recap-section #youtube-iframe {
+  border: none;
+  margin: 0 auto;
+  display: block;
+}
+#be-part-of-it {
+  background-color: #6eb300;
+  color: #fff;
+  text-align: center;
+}
+#be-part-of-it img {
+  width: 80px;
+  height: auto;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+#be-part-of-it .section-paragraph {
+  width: 280px;
+}
+#contact-section {
+  background-color: #1f1f1f;
+  color: #fff;
 }
 
 
