--- a/app/styl/variables.styl
+++ b/app/styl/variables.styl
@@ -8,3 +8,7 @@ lg = "(min-width: 1200px)"
 
 // COLORS
 colGreen = #6EB300
+colWhite = #FFFFFF
+colLight = #EEEDEC
+colDark = #1F1F1F
+colGrey = #4D4D4D
