--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -1,3 +1,113 @@
 #background-image
   img(src="/img/logo.png" alt="droidcon Kraków main logo")
-  a.green-button(href="mailto:contact@droidcon.pl") Contact us
+
+#join-us-section.section
+  .container
+    .row
+      .col-xs-12
+        .section-title
+          h2.main-title About
+    .row
+      .col-xs-12
+        .section-paragraph
+          p
+            | droidcon Kraków is a part of global conference
+            | series and a network focusing on the best of Android.
+
+    .row
+      .col-xs-12
+        .section-paragraph
+          p
+            | Be a part of it!
+          p
+            | Join 3rd edition of droidcon Kraków!
+    .row
+      .col-xs-12.col-md-6
+        .when-where.float-right
+          img(src="/img/calendar.png" alt="Calendar icon image")
+          p
+            | 1st-2rd December 2016 - Conference
+            br
+            | 3rd December 2016 - Hackathon
+      .col-xs-12.col-md-6
+        .when-where.float-left.empty
+          img(src="/img/location.png" alt="Venue icon image")
+          p TBA
+
+#prev-year-recap-section.section
+  .container
+    .row
+      .col-xs-12
+        .section-title
+          h2.main-title See what happened last year
+    .row
+      .col-xs-12
+        iframe#youtube-iframe(
+          width="320" height="215"
+          src="http://www.youtube.com/embed/Dg-dbrP9PaM?"
+        )
+    br
+    .row
+      .col-xs-12
+        .section-paragraph
+          a.link(href="https://www.youtube.com/watch?v=Dg-dbrP9PaM&list=PLvpKlOXx1MBMfL4llJOi0VX6LcQVP0Su0" target="_blank") See more
+
+//#be-part-of-it.section
+//  .container
+//    .row
+//      .col-xs-12
+//        .section-title
+//          h2.main-title Be a part of it too
+//    .row
+//      .col-xs-12
+//        img(src="/img/learn_button.png" alt="Learn image")
+//        h4.section-subtitle Learn
+//        p.section-paragraph
+//          | Attend the conference,
+//          | listen to different lectures
+//          | and take part in upcoming
+//          | Hackathon.
+//      .col-xs-12
+//        img(src="/img/teach_button.png" alt="Teach image")
+//        h4.section-subtitle Teach
+//        p.section-paragraph
+//          | Become a speaker at
+//          | droidcon Kraków and give a lecture
+//          | on the newest subjects
+//          | involving Android.
+//      .col-xs-12
+//        img(src="/img/support_button.png" alt="Support image")
+//        h4.section-subtitle Support
+//        p.section-paragraph
+//          | Help the conference by
+//          | donating, volunteering or in
+//          | other way to become an
+//          | even bigger event.
+
+#sponsor-us-section.section
+  .container
+    .row
+      .col-xs-12
+        .section-title
+          h2.main-title Sponsor us
+        p.section-paragraph
+          | If you or your company are looking for a place
+          | where can find great experts in Android
+          | or want to share some of your products
+          | this is the place for you!
+        p.section-paragraph
+          | Contact us for more details on Sponsors' packages.
+          br
+          br
+          a.green-button(href="mailto:contact+sponsor@droidcon.pl") contact+sponsor@droidcon.pl
+#contact-section.section
+  .container
+    .row
+      .col-xs-12
+        .section-title
+          h2.main-title Contact us
+        p.section-paragraph
+          | If you have any question regarding droidcon
+          | Kraków conference please email us.
+          br
+          a.link(href="mailto:contact@droidcon.pl") contact@droidcon.pl
