--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -23,14 +23,14 @@
             | Join 3rd edition of droidcon Kraków!
     .row
       .col-xs-12.col-md-6
-        .when-where.float-right
+        .when-where
           img(src="/img/calendar.png" alt="Calendar icon image")
           p
             | 1st-2rd December 2016 - Conference
             br
             | 3rd December 2016 - Hackathon
       .col-xs-12.col-md-6
-        .when-where.float-left.empty
+        .when-where.empty
           img(src="/img/location.png" alt="Venue icon image")
           p TBA
 
