--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -26,7 +26,7 @@
         .when-where
           img(src="/img/calendar.png" alt="Calendar icon image")
           p
-            | 1st-2rd December 2016 - Conference
+            | 1st-2nd December 2016 - Conference
             br
             | 3rd December 2016 - Hackathon
       .col-xs-12.col-md-6
