Main banner configuration & timer countdown

--- a/app/styl/variables.styl
+++ b/app/styl/variables.styl
@@ -1,6 +1,6 @@
 //
 smallPhones = "(max-width: 460px)"
-xs = "(max-width: 767px)"
+xs = "(min-width: 461px)"
 sm = "(min-width: 768px)"
 md = "(min-width: 992px)"
 lg = "(min-width: 1200px)"
