--- a/app/templates/head/head-commons.jade
+++ b/app/templates/head/head-commons.jade
@@ -25,6 +25,7 @@ link(sizes="32x32" href="img/droidcon-logo-simple.png" rel="icon")
 
 script(type='text/javascript', src="javascripts/vendor.js")
 script(type='text/javascript', src="javascripts/app.js")
+script(type='text/javascript', src='clock_assets/jquery.countdown.min.js')
 
 script(type='text/javascript').
   if (window.brunch == null) {
