--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -1,7 +1,20 @@
+//#main-menu
+//  .container
+//    .row
+//      .col-xs-12
+//        span my test string is here
+
+
+//main banner
 #background-image
   img(src="/img/logo.png" alt="droidcon Kraków main logo")
+  #conference-timer
+    span(style="font-size: 30px") '16 countdown
+    .clock-builder-output
+#background-cover.to_change
 
-#join-us-section.section
+
+#about-section.section
   .container
     .row
       .col-xs-12
