--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -68,38 +68,90 @@ body
     color white
 
 // MAIN PAGE STYLES
+
+//menu bar styles
+#main-menu
+  position fixed
+  top 0
+  left 0
+  right 0
+  z-index 1000
+  background-color #FFF
+  height 70px
+  text-align center
+  padding 10px 0
+  border-bottom 4px solid colGreen
+
+
+//main banner styles
+smMainBannerHeight = 500px
+
+#background-cover
+  background-color #000000
+  height smMainBannerHeight
+  width 100%
+  position absolute
+  top 0
+  z-index 1000
+  opacity 0
+
 #background-image
   background-image url("../img/bg-02.jpg")
-  height 100%
+  background-color #000000
+  height smMainBannerHeight
   -moz-background-size cover
   -webkit-background-size cover
   background-size cover
   background-position top center
   background-repeat no-repeat
   position relative
+  -moz-box-shadow 0px 6px 10px #000
+  -webkit-box-shadow 0px 6px 10px #000
+  box-shadow 0px 2px 10px #000
+  @media sm
+    background-position top right
+  @media md
+    background-position 0% 30%
+
   img
     width 90%
-    max-width 600px
+    max-width 550px
     height auto
     position absolute
-    top -20%
-    bottom 0
+    top 60px
     left 0
     right 0
     margin auto
+    @media sm
+      max-width 600px
     @media md
-      max-width 900px
-  a
+      max-width 700px
+
+  #conference-timer
+    color colWhite
     position absolute
-    top 250px
-    bottom 0
     left 0
     right 0
-    margin auto
+    width 100%
+    bottom 50px
+    text-align center
+    font-size 50px
+    font-family 'Roboto Condensed', sans-serif
+    font-weight 300
 
-#join-us-section
+#background-cover,
+#background-image
+  @media sm
+    height (smMainBannerHeight + 100px)
+  @media md
+    min-height 65vh
+
+//about section styles
+#about-section
   background-color colLight
   color colDark
+  @media md
+    min-height 35vh
 
   .when-where
     margin 20px auto 0
