About & recap sections & global font styles fix

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -14,6 +14,7 @@
 #background-cover.to_change
 
 
+//about section
 #about-section.section
   .container
     .row
@@ -22,18 +23,13 @@
           h2.main-title About
     .row
       .col-xs-12
-        .section-paragraph
-          p
-            | droidcon Kraków is a part of global conference
-            | series and a network focusing on the best of Android.
-
-    .row
-      .col-xs-12
-        .section-paragraph
-          p
-            | Be a part of it!
-          p
-            | Join 3rd edition of droidcon Kraków!
+        p.section-paragraph
+          | droidcon Kraków is a part of global conference
+          | series and a network focusing on the best of Android.
+          br
+          | Be a part of it!
+          br
+          | Join 3rd edition of droidcon Kraków!
     .row
       .col-xs-12.col-md-6
         .when-where
@@ -47,6 +43,7 @@
           img(src="/img/location.png" alt="Venue icon image")
           p TBA
 
+//recap section
 #prev-year-recap-section.section
   .container
     .row
