--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -26,7 +26,9 @@ body
   h2.main-title
     font-weight 500
     font-family "nerisblack", Helvetica, Arial, sans-serif
-    font-size 25px
+    font-size 24px
+    @media md
+      font-size 26px
 
 .section-subtitle
   text-align center
@@ -35,8 +37,10 @@ body
 
 .section-paragraph
   max-width 320px
-  margin 0 auto
+  margin 5px auto 10px
   text-align center
+  @media xs
+    max-width 360px
   @media md
     max-width 420px
 
@@ -169,6 +173,8 @@ smMainBannerHeight = 500px
       width 315px
       p
         width 100%
+    @media xs
+      max-width 340px
     @media md
       margin-top 20px
       max-width 350px
@@ -184,8 +190,11 @@ smMainBannerHeight = 500px
 
   #youtube-iframe
     border none
-    margin 0 auto
+    margin 10px auto
     display block
+    @media md
+      width 560px !important
+      height 349px !important
 
 #be-part-of-it
   background-color colGreen
