--- a/app/assets/webfonts/fonts.css
+++ b/app/assets/webfonts/fonts.css
@@ -34,3 +34,16 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'neristhin';
+    src: url('../webfonts/neris-fontfacekit/neris_thin_macroman/Neris-Thin-webfont.eot');
+    src: url('../webfonts/neris-fontfacekit/neris_thin_macroman/Neris-Thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../webfonts/neris-fontfacekit/neris_thin_macroman/Neris-Thin-webfont.woff') format('woff'),
+         url('../webfonts/neris-fontfacekit/neris_thin_macroman/Neris-Thin-webfont.ttf') format('truetype'),
+         url('../webfonts/neris-fontfacekit/neris_thin_macroman/Neris-Thin-webfont.svg#neristhin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
