--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1,5 +1,7 @@
 @import '../assets/webfonts/fonts.css';
 @import 'variables.styl'
+@import 'global.styl'
+@import 'footer.styl'
 
 html,
 body
@@ -11,67 +13,6 @@ body
   font-family "nerislight", Helvetica, Arial, sans-serif
   font-size 16px
 
-// GLOBAL STYLES
-.section
-  padding-top 20px
-  padding-bottom 40px
-  font-family "nerislight", Helvetica, Arial, sans-serif
-  font-size 16px
-  @media md
-    font-size 18px
-
-.section-title
-  text-align center
-  margin-bottom 30px
-  h2.main-title
-    font-weight 500
-    font-family "nerisblack", Helvetica, Arial, sans-serif
-    font-size 24px
-    @media md
-      font-size 26px
-
-.section-subtitle
-  text-align center
-  font-family "nerisblack", Helvetica, Arial, sans-serif
-  font-size 20px
-
-.section-paragraph
-  max-width 320px
-  margin 5px auto 10px
-  text-align center
-  @media xs
-    max-width 360px
-  @media md
-    max-width 420px
-
-.float-right
-  float right
-.float-left
-  float left
-
-.link
-  text-decoration underline
-  color inherit
-  &:hover
-    color inherit
-
-.green-button
-  width 150px
-  height 50px
-  text-align center
-  padding 13px 25px
-  background-color colGreen
-  color white
-  font-family 'nerissemibold', sans-serif
-  font-size 16px
-  transition background-color 0.3s ease
-  border none
-  &:hover, &:active, &:focus
-    background-color #7CC900
-    text-decoration none
-    color white
-
-// MAIN PAGE STYLES
 
 //menu bar styles
 #main-menu
