New date & timer corrections

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -9,8 +9,19 @@
 #background-image
   img(src="/img/logo.png" alt="droidcon Kraków main logo")
   #conference-timer
-    span(style="font-size: 30px") '16 countdown
     .clock-builder-output
+      .countdown-fld
+        span Days
+        #days
+      .countdown-fld
+        span Hours
+        #hours
+      .countdown-fld
+        span Minutes
+        #minutes
+      .countdown-fld
+        span Seconds
+        #seconds
 #background-cover.to_change
 
 
