--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -29,7 +29,7 @@ body
 
 
 //main banner styles
-smMainBannerHeight = 500px
+smMainBannerHeight = 100vh
 
 #background-cover
   background-color #000000
@@ -37,10 +37,11 @@ smMainBannerHeight = 500px
   width 100%
   position absolute
   top 0
-  z-index 1000
+  z-index 100
   opacity 0
 
 #background-image
+  height smMainBannerHeight
   background-image url("../img/bg-02.jpg")
   background-color #000000
   height smMainBannerHeight
@@ -50,9 +51,6 @@ smMainBannerHeight = 500px
   background-position top center
   background-repeat no-repeat
   position relative
-  -moz-box-shadow 0px 6px 10px #000
-  -webkit-box-shadow 0px 6px 10px #000
-  box-shadow 0px 2px 10px #000
   @media sm
     background-position top right
   @media md
@@ -63,14 +61,16 @@ smMainBannerHeight = 500px
     max-width 550px
     height auto
     position absolute
-    top 60px
+    top 25%
     left 0
     right 0
     margin auto
     @media sm
       max-width 600px
+      top 30%
     @media md
       max-width 700px
+      top 25%
 
   #conference-timer
     color colWhite
@@ -78,18 +78,37 @@ smMainBannerHeight = 500px
     left 0
     right 0
     width 100%
-    bottom 50px
+    bottom 20%
     text-align center
-    font-size 50px
+    font-size 52px
     font-family 'Roboto Condensed', sans-serif
     font-weight 300
+    @media sm
+      font-size 62px
+    @media md
+      font-size 70px
+    .countdown-fld
+      display inline-block
+      margin-right 20px
+      span
+        font-size 16px
+        text-align center
 
-#background-cover,
-#background-image
-  @media sm
-    height (smMainBannerHeight + 100px)
-  @media md
-    min-height 65vh
+  // setup for small horizontal screens
+  @media only screen and (max-height: 768px) and (orientation: landscape)
+    img
+      width 50%
+      top 27%
+      right initial
+      left 30px
+      padding 20px 0
+    #conference-timer
+      width 45%
+      left initial
+      top 36%
+      font-size 38px
+      .countdown-fld
+        margin-right 15px
 
 //about section styles
 #about-section
