--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -11288,23 +11288,191 @@ button.swiper-pagination-bullet {
   background-color: #4d4d4d;
   color: #eeedec;
   text-align: center;
-  font-family: "nerislight", Helvetica, Arial, sans-serif;
+  font-family: "neristhin", Helvetica, Arial, sans-serif;
   padding: 5px 0;
   min-height: 30px;
 }
-
-@import '../assets/webfonts/fonts.css';
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+@media sm {
+  #footer-section {
+    text-align: left;
+  }
 }
-body {
+@media md {
+  #footer-section {
+    font-size: 18px;
+    padding: 15px 0;
+  }
+}
+#footer-section .footer-column {
+  margin-top: 20px;
+}
+#footer-section .footer-header {
+  font-weight: 700;
+}
+#footer-section .footer-list {
+  font-family: "neristhin", Helvetica, Arial, sans-serif;
+  list-style: none;
+  margin-top: 10px;
+  padding: 0;
+  font-size: 14px;
+}
+@media md {
+  #footer-section .footer-list {
+    font-size: 16px;
+  }
+}
+#footer-section .footer-list li {
+  margin-top: 5px;
+}
+@media sm {
+  #footer-section .social-icons {
+    text-align: right;
+    float: right;
+  }
+}
+#footer-section .social-icons .social-img {
+  height: 30px;
+  margin: 0 15px;
+}
+@media sm {
+  #footer-section .social-icons .social-img {
+    margin: 0 10px;
+  }
+}
+@media md {
+  #footer-section .social-icons .social-img {
+    margin: 0 20px;
+  }
+}
+#footer-section #underline {
+  width: 100%;
+  border-bottom: 1px solid #fff;
+  margin: 30px 0 30px;
+}
+#footer-section #global-reference {
+  text-align: left;
+}
+#footer-section #global-reference img {
+  height: 80px;
+  float: right;
+}
+@media sm {
+  #footer-section #global-reference img {
+    float: none;
+  }
+}
+@media md {
+  #footer-section #global-reference img {
+    height: 90px;
+  }
+}
+#footer-section #global-reference p {
+  height: 70px;
+  margin: 5px 0;
+  max-width: 200px;
+}
+#footer-section #copyright-span {
+  margin-top: 30px;
+  text-align: center;
+}
+@media md {
+  #footer-section #copyright-span {
+    margin-top: 40px;
+  }
+}
+
+.section {
+  padding-top: 20px;
+  padding-bottom: 40px;
   font-family: "nerislight", Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
+@media md {
+  .section {
+    font-size: 18px;
+  }
+}
+.section-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.section-title h2.main-title {
+  font-weight: 500;
+  font-family: "nerisblack", Helvetica, Arial, sans-serif;
+  font-size: 24px;
+}
+@media md {
+  .section-title h2.main-title {
+    font-size: 26px;
+  }
+}
+.section-subtitle {
+  text-align: center;
+  font-family: "nerisblack", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+}
+.section-paragraph {
+  max-width: 320px;
+  margin: 5px auto 10px;
+  text-align: center;
+}
+@media xs {
+  .section-paragraph {
+    max-width: 360px;
+  }
+}
+@media md {
+  .section-paragraph {
+    max-width: 420px;
+  }
+}
+.float-right {
+  float: right;
+}
+.float-left {
+  float: left;
+}
+.link {
+  text-decoration: underline;
+  color: inherit;
+}
+.link:hover {
+  color: inherit;
+}
+.no-padding {
+  padding: 0;
+}
+.no-margin {
+  margin: 0;
+}
+.anchor {
+  color: colWhite;
+}
+.anchor:hover {
+  color: colWhite;
+  text-decoration: none;
+}
+.green-button {
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  padding: 13px 25px;
+  background-color: colGreen;
+  color: #fff;
+  font-family: 'nerissemibold', sans-serif;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  border: none;
+}
+.green-button:hover,
+.green-button:active,
+.green-button:focus {
+  background-color: #7cc900;
+  text-decoration: none;
+  color: #fff;
+}
+
+@import '../assets/webfonts/fonts.css';
 .section {
   padding-top: 20px;
   padding-bottom: 40px;
@@ -11363,6 +11531,19 @@ body {
 .link:hover {
   color: inherit;
 }
+.no-padding {
+  padding: 0;
+}
+.no-margin {
+  margin: 0;
+}
+.anchor {
+  color: #fff;
+}
+.anchor:hover {
+  color: #fff;
+  text-decoration: none;
+}
 .green-button {
   width: 150px;
   height: 50px;
@@ -11382,6 +11563,113 @@ body {
   text-decoration: none;
   color: #fff;
 }
+#footer-section {
+  background-color: #4d4d4d;
+  color: #eeedec;
+  text-align: center;
+  font-family: "neristhin", Helvetica, Arial, sans-serif;
+  padding: 5px 0;
+  min-height: 30px;
+}
+@media (min-width: 768px) {
+  #footer-section {
+    text-align: left;
+  }
+}
+@media (min-width: 992px) {
+  #footer-section {
+    font-size: 18px;
+    padding: 15px 0;
+  }
+}
+#footer-section .footer-column {
+  margin-top: 20px;
+}
+#footer-section .footer-header {
+  font-weight: 700;
+}
+#footer-section .footer-list {
+  font-family: "neristhin", Helvetica, Arial, sans-serif;
+  list-style: none;
+  margin-top: 10px;
+  padding: 0;
+  font-size: 14px;
+}
+@media (min-width: 992px) {
+  #footer-section .footer-list {
+    font-size: 16px;
+  }
+}
+#footer-section .footer-list li {
+  margin-top: 5px;
+}
+@media (min-width: 768px) {
+  #footer-section .social-icons {
+    text-align: right;
+    float: right;
+  }
+}
+#footer-section .social-icons .social-img {
+  height: 30px;
+  margin: 0 15px;
+}
+@media (min-width: 768px) {
+  #footer-section .social-icons .social-img {
+    margin: 0 10px;
+  }
+}
+@media (min-width: 992px) {
+  #footer-section .social-icons .social-img {
+    margin: 0 20px;
+  }
+}
+#footer-section #underline {
+  width: 100%;
+  border-bottom: 1px solid #fff;
+  margin: 30px 0 30px;
+}
+#footer-section #global-reference {
+  text-align: left;
+}
+#footer-section #global-reference img {
+  height: 80px;
+  float: right;
+}
+@media (min-width: 768px) {
+  #footer-section #global-reference img {
+    float: none;
+  }
+}
+@media (min-width: 992px) {
+  #footer-section #global-reference img {
+    height: 90px;
+  }
+}
+#footer-section #global-reference p {
+  height: 70px;
+  margin: 5px 0;
+  max-width: 200px;
+}
+#footer-section #copyright-span {
+  margin-top: 30px;
+  text-align: center;
+}
+@media (min-width: 992px) {
+  #footer-section #copyright-span {
+    margin-top: 40px;
+  }
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+body {
+  font-family: "nerislight", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
 #main-menu {
   position: fixed;
   top: 0;
@@ -11396,26 +11684,24 @@ body {
 }
 #background-cover {
   background-color: #000;
-  height: 500px;
+  height: 100vh;
   width: 100%;
   position: absolute;
   top: 0;
-  z-index: 1000;
+  z-index: 100;
   opacity: 0;
 }
 #background-image {
+  height: 100vh;
   background-image: url("../img/bg-02.jpg");
   background-color: #000;
-  height: 500px;
+  height: 100vh;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
   position: relative;
-  -moz-box-shadow: 0px 6px 10px #000;
-  -webkit-box-shadow: 0px 6px 10px #000;
-  box-shadow: 0px 2px 10px #000;
 }
 @media (min-width: 768px) {
   #background-image {
@@ -11432,7 +11718,7 @@ body {
   max-width: 550px;
   height: auto;
   position: absolute;
-  top: 60px;
+  top: 25%;
   left: 0;
   right: 0;
   margin: auto;
@@ -11440,11 +11726,13 @@ body {
 @media (min-width: 768px) {
   #background-image img {
     max-width: 600px;
+    top: 30%;
   }
 }
 @media (min-width: 992px) {
   #background-image img {
     max-width: 700px;
+    top: 25%;
   }
 }
 #background-image #conference-timer {
@@ -11453,22 +11741,46 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  bottom: 50px;
+  bottom: 20%;
   text-align: center;
-  font-size: 50px;
+  font-size: 52px;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 300;
 }
 @media (min-width: 768px) {
-  #background-cover,
-  #background-image {
-    height: 600px;
+  #background-image #conference-timer {
+    font-size: 62px;
   }
 }
 @media (min-width: 992px) {
-  #background-cover,
-  #background-image {
-    min-height: 65vh;
+  #background-image #conference-timer {
+    font-size: 70px;
+  }
+}
+#background-image #conference-timer .countdown-fld {
+  display: inline-block;
+  margin-right: 20px;
+}
+#background-image #conference-timer .countdown-fld span {
+  font-size: 16px;
+  text-align: center;
+}
+@media only screen and (max-height: 768px) and (orientation: landscape) {
+  #background-image img {
+    width: 50%;
+    top: 27%;
+    right: initial;
+    left: 30px;
+    padding: 20px 0;
+  }
+  #background-image #conference-timer {
+    width: 45%;
+    left: initial;
+    top: 36%;
+    font-size: 38px;
+  }
+  #background-image #conference-timer .countdown-fld {
+    margin-right: 15px;
   }
 }
 #about-section {
