Date change fix

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -46,9 +46,9 @@
         .when-where
           img(src="/img/calendar.png" alt="Calendar icon image")
           p
-            | 1st-2nd December 2016 - Conference
+            | 8-9th December 2016 - Conference
             br
-            | 3rd December 2016 - Hackathon
+            | 10th December 2016 - Hackathon
       .col-xs-12.col-md-6
         .when-where.empty
           img(src="/img/location.png" alt="Venue icon image")
