Add the venue info

--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -52,7 +52,10 @@
       .col-xs-12.col-md-6
         .when-where.empty
           img(src="/img/location.png" alt="Venue icon image")
-          p TBA
+          p
+            | ParkInn by Radisson
+            br
+            | Monte Cassino 2 St., Kraków
 
 //recap section
 #prev-year-recap-section.section
