--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -156,6 +156,10 @@ smMainBannerHeight = 100vh
       width 560px !important
       height 349px !important
 
+#call-4-paper-section
+  background-color colDark
+  color colWhite
+
 #be-part-of-it
   background-color colGreen
   color colWhite
