--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -76,6 +76,28 @@
         .section-paragraph
           a.link(href="https://www.youtube.com/watch?v=Dg-dbrP9PaM&list=PLvpKlOXx1MBMfL4llJOi0VX6LcQVP0Su0" target="_blank") See more
 
+//C4P section
+#call-4-paper-section.section
+  .container
+    .row
+      .col-xs-12
+        .section-title
+          h2.main-title Call For Papers is open!
+    .row
+      .col-xs-12
+        p.section-paragraph
+          | The day has finally come!
+          br
+          | The Call For Papers for droidcon 2016 is open
+          | and you can submit your ideas of talks for this year's agenda.
+          br
+          | Expect first evaluations in the end of September 2016.
+        p.section-paragraph
+          | Hope to see you on droidcon KR 2016!
+        p.section-paragraph.button-paragraph
+          a.green-button(href="https://goo.gl/forms/jRwLWmej0aflhVII2" target="_blank") Submit your talk
+
+
 //#be-part-of-it.section
 //  .container
 //    .row
