Add buy ticket button

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -93,6 +93,15 @@ smMainBannerHeight = 100vh
       span
         font-size 16px
         text-align center
+  #main-buttons
+    color colWhite
+    position absolute
+    left 0
+    right 0
+    bottom 10%
+    text-align center
+    font-size 40px
+    z-index: 105
 
   // setup for small horizontal screens
   @media only screen and (max-height: 768px) and (orientation: landscape)
