--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -22,6 +22,9 @@
       .countdown-fld
         span Seconds
         #seconds
+  #main-buttons
+    p
+      a.green-button(href="https://goo.gl/eyw7uF" target="_blank") Buy ticket
 #background-cover.to_change
 
 
