--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -11813,6 +11813,16 @@ body {
   font-size: 16px;
   text-align: center;
 }
+#background-image #main-buttons {
+  color: #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 10%;
+  text-align: center;
+  font-size: 40px;
+  z-index: 105;
+}
 @media only screen and (max-height: 768px) and (orientation: landscape) {
   #background-image img {
     width: 50%;
